# torch_ros_wrapper

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
launch/: TorchRosNode.launch  TorchRosNodelet.launch  convertTrainedPt.launch
launch/model/: ledvo_TCN_final.pt  ledvo_tcn.pt  model_cpp.pt
plugins/: nodelets.xml
scripts/: ConvertCppPt.py
scripts/models/: tcn.py
src/: lala.cpp  torch_ros_wrapper.cpp
src/include/: torch_ros_wrapper.h
src/include/tools/: RosTopicConfigs.h  essential.h
src/tools/: RosTopicConfigs.cpp
